# aoc-python-2023

./: main.py  pyproject.toml
d1/: calibration.py
d2/: game.py
d3/: gear_ratios.py
test/: test_calibration.py  test_game.py
