[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = "Solving Advent of Code 2023 in Python"
authors = ["Holger Lösken <holger.loesken@codedge.de>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"